--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_analytics: ^10.4.4
   firebase_crashlytics: ^3.3.4
   statsfl: ^2.3.0
+  flextras: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.4.5
